// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevLoginComponent initial 1`] = `
<Panel
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Token: 
    </div>
    <Select
      choiceTransitionName="zoom"
      prefixCls="ant-select"
      showSearch={false}
      style={
        Object {
          "width": 200,
        }
      }
      transitionName="slide-up"
    >
      <Option
        value="lrc"
      >
        Local Rad Coordinator
      </Option>
      <Option
        value="nrc"
      >
        National Rad Coordinator
      </Option>
      <Option
        value="rad"
      >
        Rad Team
      </Option>
    </Select>
  </div>
</Panel>
`;

exports[`DevLoginComponent selected token 1`] = `
<Panel
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Token: 
    </div>
    <Select
      choiceTransitionName="zoom"
      prefixCls="ant-select"
      showSearch={false}
      style={
        Object {
          "width": 200,
        }
      }
      transitionName="slide-up"
      value="lrc"
    >
      <Option
        value="lrc"
      >
        Local Rad Coordinator
      </Option>
      <Option
        value="nrc"
      >
        National Rad Coordinator
      </Option>
      <Option
        value="rad"
      >
        Rad Team
      </Option>
    </Select>
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Person: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
        ]
      }
      getName={[Function]}
      name="person"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
      value={0}
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Function: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "id": 1,
            "name": "functionLF",
          },
          Object {
            "id": 2,
            "name": "functionEB",
          },
        ]
      }
      getName={[Function]}
      name="function"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Profile: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "id": 1,
            "name": "local rad coordinator",
          },
        ]
      }
      getName={[Function]}
      name="profile"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
    >
      Login
    </Button>
  </div>
</Panel>
`;

exports[`DevLoginComponent selected token loading 1`] = `
<Panel
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Token: 
    </div>
    <Select
      choiceTransitionName="zoom"
      prefixCls="ant-select"
      showSearch={false}
      style={
        Object {
          "width": 200,
        }
      }
      transitionName="slide-up"
      value="lrc"
    >
      <Option
        value="lrc"
      >
        Local Rad Coordinator
      </Option>
      <Option
        value="nrc"
      >
        National Rad Coordinator
      </Option>
      <Option
        value="rad"
      >
        Rad Team
      </Option>
    </Select>
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Person: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
        ]
      }
      getName={[Function]}
      name="person"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
      value={0}
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Function: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "id": 1,
            "name": "functionLF",
          },
        ]
      }
      getName={[Function]}
      name="function"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      Profile: 
    </div>
    <IdentityFormSelect
      elements={
        Array [
          Object {
            "id": 1,
            "name": "local rad coordinator",
          },
        ]
      }
      getName={[Function]}
      name="profile"
      onSelectChange={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <Button
      ghost={false}
      loading={true}
      onClick={[Function]}
      prefixCls="ant-btn"
    >
      Login
    </Button>
  </div>
</Panel>
`;
